testsuite/tests/backtrace/pr6920_why_at.reference
Fatal error: exception Stdlib.Exit
Raised at Pr6920_why_at.why in file "pr6920_why_at.ml", line 9, characters 35-45
Called from Pr6920_why_at.f in file "pr6920_why_at.ml", line 11, characters 2-11
Called from Pr6920_why_at in file "pr6920_why_at.ml", line 17, characters 2-6
